[package]
name = "oracle-postprocess"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = [ "derive" ] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_derive = "1.0.228"
tokio = { version = "1.44.2", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
futures = "0.3"
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"]}
sha2 = "0.10.9"
base64 = "0.22.1"
xml = "1.2.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[[bench]]
name = "throughput"
harness = false
